# less-geometry-same-semantics

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_gpu_check_elm43.sh  run_lgss_gpu_intr_elm43.sh  run_lgss_paper_elm43.sh  run_lgss_paper_gpu.sh
configs/: arkitscenes.yaml  arkitscenes_no_fallback.yaml  baseline.yaml  benchmark.yaml  comparisons.yaml  paper_plan.yaml  paper_plan_arkitscenes.yaml
configs/legacy/: 3rscan_3dssg.yaml  paper_plan_3rscan_scannet.yaml  scannet.yaml
docs/: comparisons.md  design.md
docs/paper_support/: dataset_summary.md  evaluation_metrics_summary.md  experiment_setup_summary.md  future_work.md  limitations.md  main_claims_template.md  main_results_summary_placeholders.md  problem_statement.md
docs/server_baselines/: 3dgraphllm.md  (+5 more)
scripts/: audit_results.py  check_arkitscenes_setup.py  check_dataset_setup.py  eval_baseline.py  freeze_main_claims.py  generate_claim_tight_analysis.py  generate_main_figures.py  generate_main_tables.py  generate_paper_support.py  ingest_external_baseline.py  ingest_spatiallm_results.py  ingest_votenet_results.py  inspect_sample.py  make_paper_artifacts.py  run_ablation.py  run_benchmark.py  run_comparison_baselines.py  run_dataset_diagnostics.py  run_experiment.py  run_main_experiments.py  run_paper_package.py  setup_arkitscenes.py  train_baseline.py
tests/: test_comparisons.py  test_config_preflight.py  test_corruptions.py  test_diagnostics.py  test_generator.py  test_metrics.py  test_model_forward.py  test_paper_workflow.py  test_public_datasets.py  test_reporting.py  test_schema.py
(+96 files in other folders)
