[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "less-geometry-same-semantics"
version = "0.1.0"
description = "Lightweight point-cloud-to-semantics research prototype under aggressive geometric degradation."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Research Prototype"}]
dependencies = [
  "torch>=2.0",
  "numpy>=1.24",
  "PyYAML>=6.0",
  "jsonschema>=4.19",
  "matplotlib>=3.8",
  "pandas>=2.0",
  "plyfile>=1.0",
  "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
less_geometry_same_semantics = ["schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
